--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -1782,7 +1782,7 @@
     <string name="user_installed_services_category_title" msgid="2639470729311439731">"Preuzete aplikacije"</string>
     <string name="experimental_category_title" msgid="898904396646344152">"Eksperimentalno"</string>
     <string name="feature_flags_dashboard_title" msgid="348990373716658289">"Oznake značajki"</string>
-    <string name="bt_hci_snoop_log_filters_dashboard_title" msgid="401330708633716596">"Filtriranje Bluetooth HCI snoop loga"</string>
+    <string name="bt_hci_snoop_log_filters_dashboard_title" msgid="401330708633716596">"Filtriraj Bluetooth HCI snoop log"</string>
     <string name="bt_hci_snoop_log_filters_dashboard_summary" msgid="1319792184194176235">"Postavi filtre"</string>
     <string name="bt_hci_snoop_log_filters_dashboard_footer" msgid="4158945851818483666">"Onemogućite i omogućite Bluetooth da bi promjene stupile na snagu"</string>
     <string name="bt_hci_snoop_log_filter_pbap_title" msgid="1735427364451634823">"PBAP filtriranje Bluetooth HCI snoop loga"</string>
@@ -3181,9 +3181,9 @@
     <string name="lock_screen_notifs_show_alerting" msgid="6584682657382684566">"Sakrij bešumne razgovore i obavijesti"</string>
     <string name="lock_screen_notifs_show_none" msgid="1941044980403067101">"Ne prikazuj obavijesti"</string>
     <string name="lock_screen_notifs_redact" msgid="9024158855454642296">"Osjetljive obavijesti"</string>
-    <string name="lock_screen_notifs_redact_summary" msgid="1395483766035470612">"Prikaži osjetljiv sadržaj kad je zaslon zaključan"</string>
+    <string name="lock_screen_notifs_redact_summary" msgid="1395483766035470612">"Prikaži osjetljivi sadržaj kad je zaslon zaključan"</string>
     <string name="lock_screen_notifs_redact_work" msgid="3833920196569208430">"Osjetljive obavijesti poslovnog profila"</string>
-    <string name="lock_screen_notifs_redact_work_summary" msgid="3238238380405430156">"Prikaži osjetljiv sadržaj poslovnog profila kad je zaslon zaključan"</string>
+    <string name="lock_screen_notifs_redact_work_summary" msgid="3238238380405430156">"Prikaži osjetljivi sadržaj poslovnog profila kad je zaslon zaključan"</string>
     <string name="lock_screen_notifications_summary_show" msgid="6540443483088311328">"Prikaži cijeli sadržaj obavijesti"</string>
     <string name="lock_screen_notifications_summary_hide" msgid="7837303171531166789">"Prikaži osjetljiv sadržaj samo kad je uređaj otključan"</string>
     <string name="lock_screen_notifications_summary_disable" msgid="3388290397947365744">"Uopće ne prikazuj obavijesti"</string>
@@ -3265,7 +3265,7 @@
     <string name="notif_type_alerting" msgid="4713073696855718576">"Obavijesti"</string>
     <string name="notif_type_alerting_summary" msgid="4681068287836313604">"Možda će zvoniti ili vibrirati, ovisno o postavkama"</string>
     <string name="notif_type_silent" msgid="6273951794420331010">"Bešumno"</string>
-    <string name="notif_type_silent_summary" msgid="7820923063105060844">"Obavijesti koje su uvijek bez zvuka i vibracija"</string>
+    <string name="notif_type_silent_summary" msgid="7820923063105060844">"Obavijesti koje su uvijek bez zvuka ili vibracije"</string>
     <string name="notification_listener_allowed" msgid="5536962633536318551">"Dopušteno"</string>
     <string name="notification_listener_not_allowed" msgid="3352962779597846538">"Nije dopušteno"</string>
     <string name="notif_listener_excluded_app_title" msgid="6679316209330349730">"Pogledajte sve aplikacije"</string>
@@ -3666,8 +3666,8 @@
     <string name="allow_manage_external_storage_description" msgid="5707948153603253225">"Dopustite toj aplikaciji čitanje, izmjenu i brisanje svih datoteka na ovom uređaju ili drugim povezanim uređajima za pohranu. Ako date to dopuštenje, aplikacija može pristupati datotekama bez vašeg znanja."</string>
     <string name="filter_manage_external_storage" msgid="6751640571715343804">"Može pristupiti svim datotekama"</string>
     <string name="full_screen_intent_title" msgid="747270185715224130">"Obavijesti na cijelom zaslonu"</string>
-    <string name="permit_full_screen_intent" msgid="9035367640019960861">"Omogući obavijesti te aplikacije na cijelom zaslonu"</string>
-    <string name="footer_description_full_screen_intent" msgid="7716518411349225528">"Omogućuje aplikaciji da prikazuje obavijesti koje zauzimaju cijeli zaslon kad je uređaj zaključan. Aplikacije na taj način mogu istaknuti alarme, dolazne pozive ili druge hitne obavijesti."</string>
+    <string name="permit_full_screen_intent" msgid="9035367640019960861">"Dopusti obavijesti te aplikacije na cijelom zaslonu"</string>
+    <string name="footer_description_full_screen_intent" msgid="7716518411349225528">"Omogućuje toj aplikaciji da prikazuje obavijesti koje zauzimaju cijeli zaslon kad je uređaj zaključan. Aplikacije na taj način mogu istaknuti alarme, dolazne pozive ili druge hitne obavijesti."</string>
     <string name="media_management_apps_title" msgid="8222942355578724582">"Aplikacije za upravljanje medijima"</string>
     <string name="media_management_apps_toggle_label" msgid="166724270857067456">"Dopusti aplikaciji da upravlja medijima"</string>
     <string name="media_management_apps_description" msgid="8000565658455268524">"Ako je dopušteno, ta aplikacija može mijenjati ili brisati medijske datoteke izrađene putem ostalih aplikacija bez vašeg dopuštenja. Aplikacija mora imati dopuštenje za pristup datotekama i medijima."</string>
