--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -263,7 +263,7 @@
     <string name="disabled_by_administrator_summary" msgid="5424846182313851124">"ਉਪਲਬਧ ਨਹੀਂ ਹੈ"</string>
     <string name="security_status_title" msgid="6958004275337618656">"ਸੁਰੱਖਿਆ ਸਥਿਤੀ"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"ਸਕ੍ਰੀਨ ਲਾਕ, Find My Device, ਐਪ ਸੁਰੱਖਿਆ"</string>
-    <string name="safety_center_title" msgid="7732397372178774777">"ਸੁਰੱਖਿਆ ਅਤੇ ਪਰਦੇਦਾਰੀ"</string>
+    <string name="safety_center_title" msgid="7732397372178774777">"ਸਿਕਿਊਰਟੀ ਅਤੇ ਪਰਦੇਦਾਰੀ"</string>
     <string name="safety_center_summary" msgid="3554867379951053869">"ਐਪ ਸੁਰੱਖਿਆ, ਡੀਵਾਈਸ ਲਾਕ, ਇਜਾਜ਼ਤਾਂ"</string>
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"ਚਿਹਰਾ ਸ਼ਾਮਲ ਕੀਤਾ ਗਿਆ"</string>
     <string name="security_settings_face_preference_summary_none" msgid="523320857738436024">"ਸੈੱਟਅੱਪ ਦੀ ਲੋੜ ਹੈ"</string>
@@ -4028,7 +4028,7 @@
     <string name="financed_privacy_safe_mode" msgid="5362149445732602578">"ਆਪਣੇ ਡੀਵਾਈਸ ਨੂੰ ਸੁਰੱਖਿਅਤ ਮੋਡ ਵਿੱਚ ਰੀਬੂਟ ਕਰਨਾ"</string>
     <string name="financed_privacy_multi_users" msgid="1727194928477613081">"ਆਪਣੇ ਡੀਵਾਈਸ \'ਤੇ ਇੱਕ ਤੋਂ ਵੱਧ ਵਰਤੋਂਕਾਰ ਸ਼ਾਮਲ ਕਰੋ"</string>
     <string name="financed_privacy_config_date_time" msgid="8567370445374984365">"ਤਾਰੀਖ, ਸਮਾਂ ਅਤੇ ਸਮਾਂ ਖੇਤਰ ਬਦਲੋ"</string>
-    <string name="financed_privacy_developer_options" msgid="7602001474669831672">"ਵਿਕਾਸਕਾਰ ਚੋਣਾਂ ਵਰਤੋ"</string>
+    <string name="financed_privacy_developer_options" msgid="7602001474669831672">"ਵਿਕਾਸਕਾਰ ਵਿਕਲਪ ਵਰਤੋ"</string>
     <string name="financed_privacy_credit_provider_capabilities_category" msgid="8737902277892987998">"ਤੁਹਾਡਾ ਕ੍ਰੈਡਿਟ ਪ੍ਰਦਾਨਕ ਇਹ ਕਰ ਸਕਦਾ ਹੈ:"</string>
     <string name="financed_privacy_IMEI" msgid="1852413860963824799">"ਤੁਹਾਡੇ IMEI ਨੰਬਰ ਤੱਕ ਪਹੁੰਚ ਕਰਨਾ"</string>
     <string name="financed_privacy_factory_reset" msgid="5505016667590160732">"ਜੇ ਕੋਈ ਗੜਬੜ ਹੋ ਜਾਂਦੀ ਹੈ, ਤਾਂ ਤੁਹਾਡੇ ਡੀਵਾਈਸ ਨੂੰ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨਾ"</string>
@@ -4536,7 +4536,7 @@
     <string name="prevent_ringing_main_switch_title" msgid="4726252811262086643">"\'ਘੰਟੀ ਵੱਜਣ ਤੋਂ ਰੋਕੋ\' ਵਰਤੋ"</string>
     <string name="use_wifi_hotsopt_main_switch_title" msgid="3909731167290690539">"ਵਾਈ‑ਫਾਈ ਹੌਟਸਪੌਟ ਵਰਤੋ"</string>
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"ਐਪ ਪਿਨਿੰਗ ਵਰਤੋ"</string>
-    <string name="developer_options_main_switch_title" msgid="1720074589554152501">"ਵਿਕਾਸਕਾਰ ਚੋਣਾਂ ਵਰਤੋ"</string>
+    <string name="developer_options_main_switch_title" msgid="1720074589554152501">"ਵਿਕਾਸਕਾਰ ਵਿਕਲਪ ਵਰਤੋ"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"ਪ੍ਰਿੰਟ ਸੇਵਾ ਵਰਤੋ"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"ਇੱਕ ਤੋਂ ਵੱਧ ਵਰਤੋਂਕਾਰਾਂ ਨੂੰ ਆਗਿਆ ਦਿਓ"</string>
     <string name="multiple_users_main_switch_keywords" msgid="4845954458094134356">"ਆਗਿਆ ਦਿਓ, ਇੱਕ ਤੋਂ ਵੱਧ, ਵਰਤੋਂਕਾਰ, ਪਰਮਿਟ, ਕਈ"</string>
