--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -842,7 +842,7 @@
     <string name="wifi_failed_connect_message" msgid="8538000546604347894">"נכשל הניסיון להתחבר לרשת"</string>
     <string name="wifi_not_in_range_message" msgid="3885327464037574739">"הרשת לא בטווח"</string>
     <string name="wifi_forget" msgid="3485573280364015620">"הסרה"</string>
-    <string name="wifi_modify" msgid="5127926476383659412">"שנה"</string>
+    <string name="wifi_modify" msgid="5127926476383659412">"שינוי"</string>
     <string name="wifi_failed_forget_message" msgid="8272732599235525880">"נכשל הניסיון לשכוח את הרשת"</string>
     <string name="wifi_save" msgid="2312643132472226807">"שמירה"</string>
     <string name="wifi_failed_save_message" msgid="1830279872341387120">"נכשל הניסיון לשמור את הרשת"</string>
