--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -263,7 +263,7 @@
     <string name="disabled_by_administrator_summary" msgid="5424846182313851124">"မရနိုင်ပါ"</string>
     <string name="security_status_title" msgid="6958004275337618656">"လုံခြုံရေး အခြေအနေ"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"ဖန်သားပြင် လော့ခ်၊ Find My Device၊ အက်ပ် လုံခြုံရေး"</string>
-    <string name="safety_center_title" msgid="7732397372178774777">"လုံခြုံရေးနှင့် ကိုယ်ရေးဒေတာ"</string>
+    <string name="safety_center_title" msgid="7732397372178774777">"စက်နှင့်အချက်အလက်လုံခြုံရေး"</string>
     <string name="safety_center_summary" msgid="3554867379951053869">"အက်ပ်လုံခြုံရေး၊ စက်ပစ္စည်းလော့ခ်၊ ခွင့်ပြုချက်များ"</string>
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"မျက်နှာ ထည့်ထားသည်"</string>
     <string name="security_settings_face_preference_summary_none" msgid="523320857738436024">"စနစ်ထည့်သွင်းရန် လိုအပ်သည်"</string>
@@ -480,7 +480,7 @@
     <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="345336447137417638">"အသွင်ဝှက်ခြင်း၊ အထောက်အထားများ စသည်"</string>
     <string name="security_advanced_settings_keywords" msgid="5294945170370974974">"လုံခြုံရေး၊ နောက်ထပ် လုံခြုံရေးဆက်တင်များ၊ နောက်ထပ် ဆက်တင်များ၊ အဆင့်မြင့် လုံခြုံရေးဆက်တင်များ"</string>
     <string name="privacy_advanced_settings" msgid="8828215456566937719">"နောက်ထပ် ကိုယ်ရေးအချက်အလက်လုံခြုံမှု ဆက်တင်များ"</string>
-    <string name="more_security_privacy_settings" msgid="123465614090328851">"နောက်ထပ် လုံခြုံရေးနှင့် ကိုယ်ရေးဒေတာ လုံခြုံမှု"</string>
+    <string name="more_security_privacy_settings" msgid="123465614090328851">"နောက်ထပ် စက်နှင့်အချက်အလက်လုံခြုံရေး"</string>
     <string name="security_header" msgid="961514795852103424">"လုံခြုံရေး"</string>
     <string name="privacy_header" msgid="5526002421324257007">"ကိုယ်ရေးဒေတာ"</string>
     <string name="work_profile_category_header" msgid="85707750968948517">"အလုပ်ပရိုဖိုင်"</string>
@@ -1586,7 +1586,7 @@
     <string name="force_stop_dlg_text" msgid="1527286468544457368">"အကယ်၍ အက်ပ်အားမဖြစ်မနေရပ်ခိုင်းလျှင် အမှားအယွင်းဖြစ်နိုင်သည်။"</string>
     <string name="app_disable_dlg_positive" msgid="1414218905322009505">"အက်ပ်ပိတ်ထားရန်"</string>
     <string name="app_disable_dlg_text" msgid="2449382902751908916">"ဤအက်ပ်ကို ပိတ်လိုက်လျှင် Android နှင့် အခြားအက်ပ်များ ပုံမှန် အလုပ်လုပ်တော့မည် မဟုတ်ပါ။ ဤအက်ပ်ကို သင့်စက်ပစ္စည်းပေါ်တွင် ကြိုတင်ထည့်သွင်းထားသဖြင့် ၎င်းကို ဖျက်၍မရပါ။ ပိတ်ခြင်းဖြင့် ဤအက်ပ်ကို ရပ်လိုက်ပြီး သင့်စက်ပစ္စည်းပေါ်တွင် ဖျောက်ထားပါမည်။"</string>
-    <string name="app_install_details_group_title" msgid="1172114479073704677">"စတိုး"</string>
+    <string name="app_install_details_group_title" msgid="1172114479073704677">"Store"</string>
     <string name="app_install_details_title" msgid="7783556181897142187">"အက်ပ်အသေးစိတ်"</string>
     <string name="app_install_details_summary" msgid="2013043219249992373">"အက်ပ်ကို <xliff:g id="APP_STORE">%1$s</xliff:g> မှ ထည့်သွင်းထားသည်"</string>
     <string name="instant_app_details_summary" msgid="417197491598208216">"<xliff:g id="APP_STORE">%1$s</xliff:g> နှင့်ပတ်သက်သော နောက်ထပ်အကြောင်းအရာများ"</string>
@@ -2129,7 +2129,7 @@
     <string name="keywords_voice_access" msgid="7807335263195876454"></string>
     <string name="print_settings" msgid="8519810615863882491">"ပုံနှိပ်ခြင်း"</string>
     <string name="print_settings_summary_no_service" msgid="6721731154917653862">"ပိတ်"</string>
-    <string name="print_settings_summary" msgid="1458773840720811915">"{count,plural, =1{ပရင့် ဝန်ဆောင်မှု ၁ ခုဖွင့်ထားသည်}other{ပရင့် ဝန်ဆောင်မှု # ခုဖွင့်ထားသည်}}"</string>
+    <string name="print_settings_summary" msgid="1458773840720811915">"{count,plural, =1{ပုံနှိပ်ဝန်ဆောင်မှု ၁ ခုဖွင့်ထားသည်}other{ပုံနှိပ်ဝန်ဆောင်မှု # ခုဖွင့်ထားသည်}}"</string>
     <string name="print_jobs_summary" msgid="7040836482336577323">"{count,plural, =1{ပရင့်ထုတ်ရန် ဖိုင် ၁ ဖိုင်}other{ပရင့်ထုတ်ရန် ဖိုင် # ဖိုင်}}"</string>
     <string name="print_settings_title" msgid="7680498284751129935">"ပုံနှိပ်ဝန်ဆောင်မှုများ"</string>
     <string name="print_no_services_installed" msgid="7554057966540602692">"မည်သည့်ဆားဗစ်မှမရှိပါ"</string>
@@ -2547,7 +2547,7 @@
     <string name="data_usage_background_label" msgid="5363718469293175279">"နောက်ခံ:"</string>
     <string name="data_usage_app_settings" msgid="5693524672522122485">"အက်ပ်ဆက်တင်များ"</string>
     <string name="data_usage_app_restrict_background" msgid="5728840276368097276">"နောက်ခံတွင်သုံးသောဒေတာ"</string>
-    <string name="data_usage_app_restrict_background_summary" msgid="2997942775999602794">"နောက်ခံတွင် မိုဘိုင်းဒေတာ သုံးခွင့်ပေးရန်"</string>
+    <string name="data_usage_app_restrict_background_summary" msgid="2997942775999602794">"နောက်ခံတွင် မိုဘိုင်းဒေတာ သုံးခွင့်ပေးသည်"</string>
     <string name="data_usage_app_restrict_background_summary_disabled" msgid="8213268097024597864">"ဤအပလီကေးရှင်းအတွက် နောက်ခံဒေတာကိုကန့်သတ်ရန် ဦးစွာမိုဘိုင်းဒေတာကန့်သတ်မှုကိုသတ်မှတ်ပါ"</string>
     <string name="data_usage_app_restrict_dialog_title" msgid="5383874438677899255">"နောက်ခံဒေတာ ကန့်သတ်မည်လား?"</string>
     <string name="data_usage_app_restrict_dialog" msgid="5534272311979978297">"မိုဘိုင်းလ်ကွန်ရက်သာ ရှိနေသောအချိန်တွင် ဤအစီအစဥ်သည် နောက်ခံ အချက်အလက် အသုံးပြုခြင်းကို မှီခိုနေသော အပလီကေးရှင်းတစ်ခု အလုပ်လုပ်ခြင်းကို ရပ်စေနိုင်သည်။\n\nအပလီကေးရှင်းထဲမှ ဆက်တင်များထဲတွင် ပိုမိုသင့်လျော်သော ဒေတာအသုံးပြုခြင်းထိန်းချုပ်မှုများကို ရှာဖွေနိုင်သည်။"</string>
@@ -3121,7 +3121,7 @@
     <string name="conversation_notifs_category" msgid="2549844862379963273">"စကားဝိုင်း"</string>
     <string name="general_notification_header" msgid="3669031068980713359">"စီမံခန့်ခွဲရန်"</string>
     <string name="app_notification_field" msgid="3208079070539894909">"အက်ပ် အကြောင်းကြားချက်များ"</string>
-    <string name="app_notification_field_summary" msgid="5981393613897713471">"အက်ပ်တစ်ခုချင်းစီမှ အကြောင်းကြားချက်များကို ထိန်းချုပ်သည်"</string>
+    <string name="app_notification_field_summary" msgid="5981393613897713471">"သီးခြားအက်ပ်များထံမှ အကြောင်းကြားချက်များကို ထိန်းချုပ်သည်"</string>
     <string name="advanced_section_header" msgid="6478709678084326738">"အထွေထွေ"</string>
     <string name="profile_section_header" msgid="4970209372372610799">"အလုပ်အကြောင်းကြားချက်များ"</string>
     <string name="profile_section_header_for_advanced_privacy" msgid="8385775428904838579">"အလုပ်ပရိုဖိုင်"</string>
@@ -3166,7 +3166,7 @@
     <string name="bubble_app_setting_bubble_conversation" msgid="1461981680982964285">"ဤစကားဝိုင်းအတွက် ပူဖောင်းကွက်များကို ဖွင့်ပါ"</string>
     <string name="swipe_direction_ltr" msgid="5137180130142633085">"ပယ်ရန် ညာသို့၊ မီနူးပြရန် ဘယ်သို့ ပွတ်ဆွဲပါ"</string>
     <string name="swipe_direction_rtl" msgid="1707391213940663992">"ပယ်ရန် ဘယ်သို့၊ မီနူးပြရန် ညာသို့ ပွတ်ဆွဲပါ"</string>
-    <string name="silent_notifications_status_bar" msgid="6113307620588767516">"အခြေအနေပြဘားရှိ အသံတိတ် အကြောင်းကြားချက်ကို ဖျောက်ပါ"</string>
+    <string name="silent_notifications_status_bar" msgid="6113307620588767516">"အခြေအနေပြဘားရှိ အသံတိတ် အကြောင်းကြားချက်ကို ဖျောက်ရန်"</string>
     <string name="notification_pulse_title" msgid="8013178454646671529">"မီး မှိတ်တုတ်မှိတ်တုတ်လုပ်ပါ"</string>
     <string name="lock_screen_notifications_title" msgid="2876323153692406203">"ကိုယ်ရေးအချက်အလက်လုံခြုံမှု"</string>
     <string name="lockscreen_bypass_title" msgid="6519964196744088573">"လော့ခ်မျက်နှာပြင် ကျော်ရန်"</string>
@@ -3178,10 +3178,10 @@
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"လော့ခ်ချထားချိန် အကြောင်းကြားချက်များ"</string>
     <string name="lock_screen_notifs_show_all_summary" msgid="4226586018375762117">"စကားဝိုင်း၊ မူရင်း၊ အသံတိတ်များ ပြသည်"</string>
     <string name="lock_screen_notifs_show_all" msgid="1300418674456749664">"စကားဝိုင်း၊ မူရင်း၊ အသံတိတ်များ ပြရန်"</string>
-    <string name="lock_screen_notifs_show_alerting" msgid="6584682657382684566">"အသံတိတ် စကားဝိုင်း၊ အကြောင်းကြားချက်များ ဖျောက်ရန်"</string>
+    <string name="lock_screen_notifs_show_alerting" msgid="6584682657382684566">"အသံတိတ် စကားဝိုင်း၊ အကြောင်းကြားချက်များ ဖျောက်သည်"</string>
     <string name="lock_screen_notifs_show_none" msgid="1941044980403067101">"အကြောင်းကြားချက်များ မပြပါနှင့်"</string>
     <string name="lock_screen_notifs_redact" msgid="9024158855454642296">"အရေးကြီးသည့် အကြောင်းကြားချက်များ"</string>
-    <string name="lock_screen_notifs_redact_summary" msgid="1395483766035470612">"လော့ခ်ချထားစဉ် သတိထားရမည့် အကြောင်းအရာကို ပြရန်"</string>
+    <string name="lock_screen_notifs_redact_summary" msgid="1395483766035470612">"လော့ခ်ချထားစဉ် သတိထားရမည့် အကြောင်းအရာကို ပြသည်"</string>
     <string name="lock_screen_notifs_redact_work" msgid="3833920196569208430">"အရေးကြီးသည့် အလုပ်ပရိုဖိုင် အကြောင်းကြားချက်များ"</string>
     <string name="lock_screen_notifs_redact_work_summary" msgid="3238238380405430156">"လော့ခ်ချထားစဉ် သတိထားရမည့် အလုပ်ပရိုဖိုင် အကြောင်းအရာကို ပြရန်"</string>
     <string name="lock_screen_notifications_summary_show" msgid="6540443483088311328">"အကြောင်းကြားချက်ပါ အရာအားလုံး ပြပါ"</string>
@@ -3907,7 +3907,7 @@
     <string name="system_navigation_title" msgid="4890381153527184636">"လမ်းညွှန်မုဒ်"</string>
     <string name="swipe_up_to_switch_apps_title" msgid="6677266952021118342">"ခလုတ် ၂ ခု ဖြင့် လမ်းညွှန်ခြင်း"</string>
     <string name="swipe_up_to_switch_apps_summary" msgid="1415457307836359560">"အက်ပ်များပြောင်းရန် \'ပင်မ\' ခလုတ်ပေါ်တွင် အပေါ်သို့ပွတ်ဆွဲပါ။ အက်ပ်အားလုံးကြည့်ရန် ထပ်ပြီး အပေါ်သို့ပွတ်ဆွဲပါ။ ပြန်သွားရန် နောက်ပြန် ခလုတ်ကို တို့ပါ။"</string>
-    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"လုံခြုံရေးနှင့် အရေးပေါ်"</string>
+    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"ဘေးကင်းရေးနှင့် အရေးပေါ်"</string>
     <string name="emergency_dashboard_summary" msgid="401033951074039302">"အရေးပေါ် SOS၊ ဆေးဘက်ဆိုင်ရာ အချက်အလက်၊ သတိပေးချက်များ"</string>
     <string name="edge_to_edge_navigation_title" msgid="714427081306043819">"လက်ဟန်ဖြင့် လမ်းညွှန်ခြင်း"</string>
     <string name="edge_to_edge_navigation_summary" msgid="8497033810637690561">"\'ပင်မ\' သို့သွားရန် ဖန်သားပြင်၏ အောက်ခြေမှ အပေါ်သို့ပွတ်ဆွဲပါ။ အက်ပ်များပြောင်းရန် ဖန်သားပြင်အောက်မှ အပေါ်သို့ပွတ်ဆွဲ၍ ဖိထားပြီးနောက် လွှတ်လိုက်ပါ။ ပြန်သွားရန် ဘယ်ဘက် သို့မဟုတ် ညာဘက်အစွန်း တစ်ခုခုမှ ပွတ်ဆွဲပါ။"</string>
@@ -4234,7 +4234,7 @@
     <string name="carrier_settings_title" msgid="6959295328730560529">"ဖုန်းကုမ္ပဏီ ဆက်တင်များ"</string>
     <string name="cdma_lte_data_service" msgid="6937443423651347345">"ဒေတာဝန်ဆောင်မှု စတင်ရန်"</string>
     <string name="mobile_data_settings_title" msgid="3927524078598009792">"မိုဘိုင်းဒေတာ"</string>
-    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"မိုဘိုင်းကွန်ရက်သုံးပြီး ဒေတာသို့ ဝင်ခွင့်ပေးပါ"</string>
+    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"မိုဘိုင်းကွန်ရက်သုံးပြီး ဒေတာသို့ ဝင်ခွင့်ပေးသည်"</string>
     <string name="mobile_data_settings_summary_auto_switch" msgid="7851549787645698945">"ဖုန်းသည် ရနိုင်သည့်အကွာအဝေးအတွင်း ရောက်သည့်အခါ ဤဝန်ဆောင်မှုပေးသူသို့ အလိုအလျောက် ပြောင်းသွားပါမည်"</string>
     <string name="mobile_data_settings_summary_unavailable" msgid="9176513507571883986">"ဆင်းမ်ကတ် မရနိုင်ပါ"</string>
     <string name="calls_preference" msgid="2166481296066890129">"ခေါ်ဆိုမှု သတ်မှတ်ချက်"</string>
