--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -3907,7 +3907,7 @@
     <string name="system_navigation_title" msgid="4890381153527184636">"नेभिगेसन मोड"</string>
     <string name="swipe_up_to_switch_apps_title" msgid="6677266952021118342">"२ बटन नेभिगेसन"</string>
     <string name="swipe_up_to_switch_apps_summary" msgid="1415457307836359560">"एपहरू बदल्न गृह बटनमा माथितिर स्वाइप गर्नुहोस्। सबै एपहरू हेर्न फेरि माथितिर स्वाइप गर्नुहोस्। पछाडि जान पछाडि नामक बटनमा ट्याप गर्नुहोस्।"</string>
-    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"सुरक्षा तथा आपत्‌कालीन सेवा"</string>
+    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"सुरक्षितपना तथा आपत्‌कालीन सेवा"</string>
     <string name="emergency_dashboard_summary" msgid="401033951074039302">"आपत्‌कालीन SOS, चिकित्सकीय जानकारी, एलर्टहरू"</string>
     <string name="edge_to_edge_navigation_title" msgid="714427081306043819">"जेस्चरले गरिने नेभिगेसन"</string>
     <string name="edge_to_edge_navigation_summary" msgid="8497033810637690561">"होम स्क्रिनमा जान स्क्रिनको फेदबाट माथितिर स्वाइप गर्नुहोस्। एउटा एपबाट अर्को एपमा जान आफ्नो स्क्रिनको फेदबाट माथितिर स्वाइप गर्नुहोस्, होल्ड गर्नुहोस् अनि छाड्नुहोस्। पछाडि जान स्क्रिनको बायाँ वा दायाँ कुनाबाट स्वाइप गर्नुहोस्।"</string>
