--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -1552,7 +1552,7 @@
     <string name="default_emergency_app" msgid="1929974800666613803">"ଜରୁରୀକାଳୀନ ଆପ୍‌"</string>
     <string name="reset_app_preferences" msgid="8861758340732716573">"ଆପ ପସନ୍ଦଗୁଡ଼ିକୁ ରିସେଟ କରନ୍ତୁ"</string>
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"ଆପ ପସନ୍ଦଗୁଡ଼ିକୁ ରିସେଟ କରିବେ?"</string>
-    <string name="reset_app_preferences_desc" msgid="8550782670650158299">"ନିମ୍ନୋକ୍ତ ପାଇଁ ଏହା ସମସ୍ତ ପସନ୍ଦକୁ ରିସେଟ କରିବ:\n\n "<li>"ଅକ୍ଷମ କରାଯାଇଥିବା ଆପ୍ସ"</li>\n<li>"ଅକ୍ଷମ କରାଯାଇଥିବା ଆପ ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକ"</li>\n<li>"କାର୍ଯ୍ୟଗୁଡ଼ିକ ପାଇଁ ଡିଫଲ୍ଟ ଆପ୍ଲିକେସନଗୁଡ଼ିକ"</li>\n<li>"ଆପ୍ସ ପାଇଁ ବେକଗ୍ରାଉଣ୍ଡ ଡାଟା ପ୍ରତିବନ୍ଧକଗୁଡ଼ିକ"</li>\n<li>"ଯେ କୌଣସି ଅନୁମତି ପ୍ରତିବନ୍ଧକ"</li>\n<li>"ବେଟେରୀ ବ୍ୟବହାର ସେଟିଂସ"</li>\n\n"ଆପଣ କୌଣସି ଆପ ଡାଟା ହରାଇବେ ନାହିଁ।"</string>
+    <string name="reset_app_preferences_desc" msgid="8550782670650158299">"ନିମ୍ନୋକ୍ତ ପାଇଁ ଏହା ସମସ୍ତ ପସନ୍ଦକୁ ରିସେଟ କରିବ:\n\n"<li>"ଅକ୍ଷମ କରାଯାଇଥିବା ଆପ୍ସ"</li>\n<li>"ଅକ୍ଷମ କରାଯାଇଥିବା ଆପ ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକ"</li>\n<li>"କାର୍ଯ୍ୟଗୁଡ଼ିକ ପାଇଁ ଡିଫଲ୍ଟ ଆପ୍ଲିକେସନଗୁଡ଼ିକ"</li>\n<li>"ଆପ୍ସ ପାଇଁ ବେକଗ୍ରାଉଣ୍ଡ ଡାଟା ପ୍ରତିବନ୍ଧକଗୁଡ଼ିକ"</li>\n<li>"ଯେ କୌଣସି ଅନୁମତି ପ୍ରତିବନ୍ଧକ"</li>\n<li>"ବେଟେରୀ ବ୍ୟବହାର ସେଟିଂସ"</li>\n\n"ଆପଣ କୌଣସି ଆପ ଡାଟା ହରାଇବେ ନାହିଁ।"</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"ଆପ୍ସକୁ ରିସେଟ କରନ୍ତୁ"</string>
     <string name="filter" msgid="9039576690686251462">"ଫିଲ୍ଟର୍"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"ଫିଲ୍ଟର ବିକଳ୍ପ ବାଛନ୍ତୁ"</string>
@@ -3907,7 +3907,7 @@
     <string name="system_navigation_title" msgid="4890381153527184636">"ନାଭିଗେସନ ମୋଡ"</string>
     <string name="swipe_up_to_switch_apps_title" msgid="6677266952021118342">"2-ବଟନ୍ ନାଭିଗେସନ୍"</string>
     <string name="swipe_up_to_switch_apps_summary" msgid="1415457307836359560">"ଆପ୍ସକୁ ସ୍ୱିଚ କରିବା ପାଇଁ, ହୋମ ବଟନରେ ଉପରକୁ ସ୍ୱାଇପ କରନ୍ତୁ। ସମସ୍ତ ଆପକୁ ଦେଖିବାକୁ, ପୁଣି ଉପରକୁ ସ୍ୱାଇପ କରନ୍ତୁ। ପଛକୁ ଫେରିବା ପାଇଁ, ପଛକୁ ଫେରିବା ବଟନରେ ଟାପ କରନ୍ତୁ।"</string>
-    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"ସୁରକ୍ଷା ଓ ଜରୁରୀକାଳୀନ ପରିସ୍ଥିତି"</string>
+    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"ନିରାପତ୍ତା ଓ ଜରୁରୀକାଳୀନ ପରିସ୍ଥିତି"</string>
     <string name="emergency_dashboard_summary" msgid="401033951074039302">"ଜରୁରୀକାଳୀନ SOS, ମେଡିକାଲ ସୂଚନା, ଆଲର୍ଟ"</string>
     <string name="edge_to_edge_navigation_title" msgid="714427081306043819">"ଜେଶ୍ଚର ନାଭିଗେସନ"</string>
     <string name="edge_to_edge_navigation_summary" msgid="8497033810637690561">"ହୋମକୁ ଯିବା ପାଇଁ, ସ୍କ୍ରିନର ତଳୁ ଉପରକୁ ସ୍ୱାଇପ କରନ୍ତୁ। ଆପ୍ସ ସୁଇଚ କରିବା ପାଇଁ, ତଳୁ ଉପରକୁ ସ୍ୱାଇପ କରନ୍ତୁ, ଧରି ରଖନ୍ତୁ, ପରେ ରିଲିଜ କରନ୍ତୁ। ପଛକୁ ଫେରିବା ପାଇଁ, ବାମ କିମ୍ବା ଡାହାଣ ଧାରରୁ ସ୍ୱାଇପ କରନ୍ତୁ।"</string>
