--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -3907,7 +3907,7 @@
     <string name="system_navigation_title" msgid="4890381153527184636">"සංචාලනය ප්‍රකාරය"</string>
     <string name="swipe_up_to_switch_apps_title" msgid="6677266952021118342">"2-බොත්තම් සංචලනය"</string>
     <string name="swipe_up_to_switch_apps_summary" msgid="1415457307836359560">"යෙදුම් මාරු කිරීමට, මුල් පිටු බොත්තම මත ස්වයිප් කරන්න. යෙදුම් සියල්ල බැලීමට, නැවතත් ස්වයිප් කරන්න. ආපසු යාමට, ආපසු බොත්තමට තට්ටු කරන්න."</string>
-    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"ආරක්ෂාව &amp; හදිසි අවස්ථාව"</string>
+    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"සුරක්ෂිතතාව &amp; හදිසි අවස්ථාව"</string>
     <string name="emergency_dashboard_summary" msgid="401033951074039302">"හදිසි අවස්ථා SOS, වෛද්‍යමය තතු, ඇඟවීම්"</string>
     <string name="edge_to_edge_navigation_title" msgid="714427081306043819">"අභින සංචලනය"</string>
     <string name="edge_to_edge_navigation_summary" msgid="8497033810637690561">"නිවසට යාමට, තිරයේ පහළින් උඩට ස්වයිප් කරන්න. යෙදුම් මාරු කිරීමට, පහළින් උඩට ස්වයිප් කර, අල්ලා සිට, පසුව මුදා හරින්න. ආපසු යාමට, වම් හෝ දකුණු දාරයෙන් ස්වයිප් කරන්න."</string>
