--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -263,7 +263,7 @@
     <string name="disabled_by_administrator_summary" msgid="5424846182313851124">"Haipatikani"</string>
     <string name="security_status_title" msgid="6958004275337618656">"Hali ya usalama"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Kufunga skrini, Tafuta Kifaa Changu, usalama wa programu"</string>
-    <string name="safety_center_title" msgid="7732397372178774777">"Usalama na faragha"</string>
+    <string name="safety_center_title" msgid="7732397372178774777">"Ulinzi na faragha"</string>
     <string name="safety_center_summary" msgid="3554867379951053869">"Usalama wa programu, ufungaji wa kifaa, ruhusa"</string>
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Utambuzi wa uso umewekwa"</string>
     <string name="security_settings_face_preference_summary_none" msgid="523320857738436024">"Unahitaji kuweka mipangilio"</string>
@@ -480,7 +480,7 @@
     <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="345336447137417638">"Usimbaji fiche, vitambulisho na zaidi"</string>
     <string name="security_advanced_settings_keywords" msgid="5294945170370974974">"usalama, mipangilio zaidi ya usalama, mipangilio zaidi, mipangilio ya kina ya usalama"</string>
     <string name="privacy_advanced_settings" msgid="8828215456566937719">"Mipangilio zaidi ya faragha"</string>
-    <string name="more_security_privacy_settings" msgid="123465614090328851">"Usalama na faragha zaidi"</string>
+    <string name="more_security_privacy_settings" msgid="123465614090328851">"Ulinzi na faragha zaidi"</string>
     <string name="security_header" msgid="961514795852103424">"Usalama"</string>
     <string name="privacy_header" msgid="5526002421324257007">"Faragha"</string>
     <string name="work_profile_category_header" msgid="85707750968948517">"Wasifu wa kazini"</string>
@@ -2020,8 +2020,8 @@
     <string name="accessibility_hearing_device_about_title" msgid="7883758309646288250">"Kuhusu vifaa vya kusikiliza"</string>
     <string name="accessibility_hearing_device_footer_summary" msgid="7451899224828040581">"Hakikisha kifaa chako cha kusikizia kimewashwa na kiko tayari kuoanishwa"</string>
     <string name="accessibility_hearing_device_pairing_page_title" msgid="6608901091770850295">"Unganisha vifaa vya kusaidia kusikia"</string>
-    <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"Vifaa vya kusaidia kusikia vinavyopatikana"</string>
-    <string name="accessibility_found_all_devices" msgid="7817834722148556520">"Je, huoni vifaa vyako vya kusikia?"</string>
+    <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"Vifaa vya kusikilizia vinavyopatikana"</string>
+    <string name="accessibility_found_all_devices" msgid="7817834722148556520">"Je, huoni vifaa vyako vya kusikilizia?"</string>
     <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"Angalia vifaa zaidi"</string>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"Marekebisho ya sauti"</string>
     <string name="accessibility_toggle_audio_description_preference_title" msgid="8916473886256061220">"Maelezo ya sauti"</string>
